<resources>
    <string name="app_name">Design</string>
    <string name="insert">Insert</string>
    <string name="Firstname">Firstname</string>
    <string name="Surname">Surname</string>
    <string name="Dinner">Dinner</string>
    <string name="Lunch">Lunch</string>
    <string name="Breakfast">Breakfast</string>
    <string name="date">Date</string>
    <string name="enter_food_name">Enter food name</string>
    <string name="fetch_nutrition">Fetch Nutrition</string>
    <string name="calories">Calories:</string>
    <string name="fats">Fats:</string>
    <string name="proteins">Proteins:</string>
    <string name="fiber">Fiber:</string>
    <string name="sugars">Sugars:</string>
    <string name="menu_item_title">Menu Item Title</string>
    <string name="search_here">Search here</string>
    <string name="mealPlan"> MealPlan</string>
    <string name="new_button_text"> Recipes</string>
    <string name="Add">ADD</string>
    <string name="Recipes">Recipes</string>
    <string name="surname">Surname</string>
    <string name="email_address">Email Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Click_To_Log_IN">CLick To Log In</string>
    <string name="Click_To_REGISTER">Click To Register</string>
    <string name="view_history">View History</string>
    <string name="meal_history_for_the_day">Meal history for the day</string>
    <string name="HistoryDate">Date</string>
    <string name="return_to_menu">Return To Menu</string>
    <string name="meal_title">Meal Title</string>
    <string name="meal_description">Meal Description</string>
    <string name="cooking_instructions">Cooking Instructions</string>
    <string name="sign_out">Sign Out</string>
    <string name="calories_0">Calories: 0</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="addMeal">Add Meal</string>
    <string name="lunch_ingredients">Lunch Ingredients</string>
    <string name="dinner_ingredients">Dinner Ingredients</string>
    <string name="breakfast_ingredients">Breakfast Ingredients</string>
    <string name="scan">Scan Food</string>
    <string name="nutrients">Nutrients</string>
    <string name="brand">Brand</string>
    <string name="product_name">Product Name</string>
    <string name="energy">Energy</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="energy_format">Energy: %1$.2f kJ</string>
    <string name="protein_format">Protein: %1$.2f g</string>
    <string name="sugars_format">Sugars: %1$.2f g</string>
    <string name="fat_format">Fat: %1$.2f g</string>
    <string name="fiber_format">Fiber: %1$.2f g</string>
    <string name="cooking_time">Cooking Time: %1$d min</string>
    <string name="serving_size">Serving Size: %1$d</string>
    <string name="calories_format">Calories: %1$.2f kcal</string>
    <string name="total_calories">Total Calories :</string>
    <string name="calories_used">Calories Used :</string>
    <string name="search">Search</string>
    <string name="sushi">Sushi</string>
    <string name="burgers">Burgers</string>
    <string name="pizza">Pizza</string>
    <string name="chinese">Chinese</string>
    <string name="italian">Italian</string>
    <string name="stew">Stew</string>
    <string name="soup">Soup</string>
    <string name="Italian">Italian</string>
    <string name="Asian">Asian</string>
    <string name="breakfast">breakfast</string>
    <string name="lunch">Lunch\n</string>
    <string name="dinner">Dinner\n</string>
    <string name="desert">Desert</string>
    <string name="Indian">Indian</string>
    <string name="Chinese">Chinese</string>
    <string name="Spanish">Spanish</string>
    <string name="Mexican">Mexican</string>
    <string name="cookingtime">CookingTime:</string>
    <string name="ShoppingList">ShoppingList</string>
    <string name="clear_meals">Clear Meals</string>
    <string name="add_to_shopping_list">Add to Shopping List</string>
    <string name="refresh">Refresh</string>
    <string name="last_week">Last Week\n</string>
    <string name="next_week">Next Week</string>
    <string name="share_mealplan">Share MealPlan</string>

    <string-array name="activity_levels">
        <item>Sedentary</item>
        <item>Lightly active</item>
        <item>Moderately active</item>
        <item>Very active</item>
        <item>Super active</item>
    </string-array>

    <string-array name="dietary_options_array">
        <item>Dairy</item>
        <item>Peanut</item>
        <item>Soy</item>
        <item>Egg</item>
        <item>Gluten</item>
        <item>Grain</item>
        <item>No Dietary Preference</item>
    </string-array>

    <string-array name="intoleranceSpinner">
        <item>Dairy</item>
        <item>Peanut</item>
        <item>Soy</item>
        <item>Egg</item>
        <item>Gluten</item>
        <item>Grain</item>
        <item>No Dietary Preference</item>
    </string-array>

    <string-array name="genderSpinner">
        <item>Male</item>
        <item>Female</item>
    </string-array>


</resources>