<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/product_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/brand_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/energy_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/energy"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="4dp"/>
    <TextView
        android:id="@+id/calories_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="4dp"/>


    <TextView
        android:id="@+id/protein_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/protein"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/sugars_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugars"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/fat_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fat"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/fiber_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fiber"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="4dp"/>
</LinearLayout>
