<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/breakfastTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Breakfast"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/breakfastIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/breakfast_ingredients"
            android:padding="8dp" />

        <TextView
            android:id="@+id/lunchTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lunch"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/lunchIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lunch_ingredients"
            android:padding="8dp" />

        <TextView
            android:id="@+id/dinnerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Dinner"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/dinnerIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dinner_ingredients"
            android:padding="8dp" />


    </LinearLayout>
</ScrollView>
