<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/mealTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/meal_title" />

        <ImageView
            android:id="@+id/mealImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/mealDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/meal_description"/>

        <TextView
            android:id="@+id/mealInstructionsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/cooking_instructions"/>

        <Button
            android:id="@+id/toMenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_to_menu"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</ScrollView>
