<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <FrameLayout
        android:id="@+id/scanner_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/product_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/brand_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/nutrients_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nutrients"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="4dp"/>


</LinearLayout>
