<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp">

            <ImageView
                android:id="@+id/previousWeekButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_left_arrow_vector"
                android:contentDescription="@string/last_week" />

            <TextView
                android:id="@+id/weekDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/nextWeekButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_right_arrow_vector"
                android:contentDescription="@string/next_week" />

        </LinearLayout>


        <TextView
            android:id="@+id/dateMonday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Monday"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/breakfastMonday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Breakfast: "
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/lunchMonday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lunch: "
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/dinnerMonday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dinner: "
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/dateTuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tuesday"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/breakfastTuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Breakfast: "
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/lunchTuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lunch: "
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/dinnerTuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dinner: "
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/dateWednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Wednesday"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/breakfastWednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Breakfast: "
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/lunchWednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lunch: "
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/dinnerWednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dinner: "
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/dateThursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Thursday"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/breakfastThursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Breakfast: "
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/lunchThursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lunch: "
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/dinnerThursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dinner: "
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/dateFriday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Friday"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/breakfastFriday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Breakfast: "
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/lunchFriday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lunch: "
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/dinnerFriday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dinner: "
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/dateSaturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Saturday"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/breakfastSaturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Breakfast: "
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/lunchSaturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lunch: "
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/dinnerSaturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dinner: "
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/dateSunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sunday"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/breakfastSunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Breakfast: "
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/lunchSunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lunch: "
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/dinnerSunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dinner: "
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_mealplan"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"
            android:textSize="18sp"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</ScrollView>
